hphp/hack/test/typecheck/records/record_inheritance_not_record.php.exp
File "record_inheritance_not_record.php", line 5, characters 18-18:
Unbound name: A (a record type) (Naming[2049])
