hphp/hack/test/typecheck/records/record_inheritance_not_record.php
<?hh

class A {}

record B extends A {}
